Version 2.0.0
===============
- Eden compatibility
- Addon now runs as a service
- Totally revamped the settings page
- Added several new options to configure, such as delayed start and scan interval
- Fixed a bug in settings that disallowed users to disable expiration checks
- Enhanced queries used to select files to be deleted
- Enable cleaning multiple databases at once, instead of just the hardcoded MyVideos34.db
- Updated text strings
- More more descriptive notifications and logging
- Dutch language support

Version 1.3.5
===============
- Bug fixes

Version 1.2.0
===============
- Added option to delete based on movie/episode rating
- Added option to movie to holding folder instead of deleting
- Code cleanup

Version 1.1.2
===============
- Fixed file naming conventions
- Updated contact details
- Fixed autoStart method call

Version 1.1.0
===============
- Almost entire rewrite of script
- Created service loop instead of relying on AlarmClock
- Setting changes will now be detected by the running service
- Removed 'delete only if watched' option and instead will ONLY delete watched files

Version 1.0.0
===============
- Intial version