@@ -14,7 +14,7 @@
     <string id="31005">Show notifications</string>
     <string id="31006">Enable debug messages</string>
     
-    <string id="31007">Clean library after deleting</string>
+    <string id="31007">Clean video library after deleting</string>
     <string id="31008">Delete movies</string>
     <string id="31009">Delete TV shows</string>
     
@@ -23,22 +23,22 @@
     
     
     <string id="32001">[B]This section specifies the conditions that must be met before any files are deleted[/B]</string>
-    <string id="32002">Only delete video after a certain number of days after watching</string>
+    <string id="32002">Only delete a video after a certain number of days after watching</string>
     <string id="32003">Days after which a video is considerd to have expired</string>
     
     <string id="32004">Only delete a video when it has a low rating</string>
-    <string id="32005">Delete video when rating is lower than</string>
-    <string id="32006">Ignore files without rating</string>
+    <string id="32005">Delete a video when its rating is lower than</string>
+    <string id="32006">Ignore videos without rating</string>
     
     <string id="32007">Only delete videos if low on disk space</string>
     <string id="32008">Minimum percentage of free disk space</string>
     <string id="32009">Path to check for free disk space</string>
     
-    <string id="32010">Enable holding folder</string>
+    <string id="32010">Move videos to a holding folder instead</string>
     <string id="32011">Holding folder location</string>
     <string id="32012">Create series and season directories</string>
     <string id="32013">Update path reference after moving</string>
-    <string id="32014">Days to hold files before deleting</string>
+    <string id="32014">[I]Note that files in this holding folder will never be deleted automatically [/I]</string>
     
     
     
