@@ -41,7 +41,7 @@
         <setting id="holding_folder" type="folder" label="32011" subsetting="true" default="special://temp" visible="eq(-1,true)" />
         <setting id="create_series_season_dirs" type="bool" label="32012" subsetting="true" default="false" visible="eq(-2,true)" />
         <setting id="update_path_reference" type="bool" label="32013" subsetting="true" default="true" visible="eq(-3,true)" />
-        <setting id="holding_expire" type="slider" label="32014" subsetting="true" default="7" range="1,1,30" option="int" visible="eq(-4,true)" />
+        <setting id="holding_info" label="32014" type="lsep" subsetting="true" />
     </category>
     
     <!-- Placeholder Section -->
